# pkg

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.test  Jakefile  LICENSE.md  Makefile  README.md  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  fly.toml  litestream.yml  otel-collector-config.yaml  package-lock.json  package.json  prometheus.yml  seed.sh  seed_stress.py  vite.config.mjs
.github/workflows/: ci.yml
e2e/: .gitignore  package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/tests/: account.spec.ts  admin.spec.ts  auth.spec.ts  github-linked.spec.ts  ownership.spec.ts  package-detail.spec.ts  publisher.spec.ts  search.spec.ts  tokens.spec.ts  visitor.spec.ts
e2e/tests/helpers/: api.ts  fixtures.ts  reset-db.ts
migrations/: 001_initial.sql  002_github_packages.sql  003_meta_registry.sql  004_admin.sql  005_download_daily.sql  006_readme.sql
prototypes/: account.html  admin-panel.html  index.html  login.html  package.html  search.html  shared.css
src/: audit.rs  auth.rs  blob.rs  cli.rs  config.rs  crypto.rs  db.rs  github.rs  github_sync.rs  health.rs  lib.rs  main.rs  ratelimit.rs  syndication.rs  tarball.rs  telemetry.rs
src/api/: account.rs  admin.rs  auth.rs  github.rs  mod.rs  packages.rs  tokens.rs
src/dal/: admin.rs  audit_log.rs  deps.rs  downloads.rs  mod.rs  oauth.rs  owners.rs  packages.rs  reports.rs  sessions.rs  sync_log.rs  time.rs  tokens.rs  users.rs  versions.rs
src/entity/: api_token.rs  audit_log.rs  dependency.rs  download_daily.rs  github_sync_log.rs  mod.rs  oauth_connection.rs  owner.rs  package.rs  package_version.rs  report.rs  session.rs  user.rs
src/migration/: m001_initial.rs  m002_github_packages.rs  m003_meta_registry.rs  m004_admin.rs  m005_download_daily.rs  m006_readme.rs  m007_perf_indexes.rs  m008_search.rs  m009_download_sum_index.rs  mod.rs
src/web/: feeds.rs  mod.rs  sitemap.rs
static/: sema-ui.js  sema.tmLanguage.json  style.css
templates/: 404.html  account.html  admin.html  base.html  feed_atom.xml  feed_rss.xml  index.html  link.html  login.html  package.html  search.html  sitemap_index.xml  sitemap_urlset.xml
tests/: blob_test.rs  integration_test.rs
tests/common/: mod.rs
web/: ui-entry.js
