[package]
name = "sema-pkg"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Self-hostable package registry for Sema"
repository = "https://github.com/sema-lisp/pkg"
homepage = "https://sema-lang.com"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "1", features = ["sqlx-sqlite", "sqlx-postgres", "sqlx-mysql", "runtime-tokio-native-tls", "macros", "with-json"] }
sea-orm-migration = { version = "1", features = ["sqlx-sqlite", "sqlx-postgres", "sqlx-mysql", "runtime-tokio-native-tls"] }
askama = "0.12"
argon2 = "0.5"
sha2 = "0.10"
rand = "0.8"
# Blob storage: local filesystem (default) or S3-compatible object storage
# (Cloudflare R2, etc.) for durable, node-independent tarball storage.
object_store = { version = "0.11", features = ["aws"] }
base64 = "0.22"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
semver = { version = "1", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
aes-gcm = "0.10"
toml = "1.1"
hmac = "0.12"
comrak = { version = "0.36", default-features = false, features = ["syntect"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
